--- a/index.html
+++ b/index.html
@@ -1,9 +1,81 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>My blog</title>
+    <title>Frances Krsinich</title>
+
+    <style>
+      body {
+       background-image: url(https://krsinich.files.wordpress.com/2023/05/img_4804.jpg?w=2048);
+                 alt= 'background image';
+       background-repeat: no-repeat;
+       background-attachment: fixed;
+      background-size: cover;
+
+       }
+
+       div.background {
+       background: url(klematis.jpg) repeat;
+       /* border: 2px solid black; */
+       }
+
+       div.transbox {
+         margin: 60px;
+         background-color: #ffffff;
+         border: 5px solid rgb(195, 84, 84);
+         opacity: 0.5;
+       }
+
+       div.transbox p {
+         margin: 10%;
+         font-weight: bold;
+         color: #000000;
+       }
+    </style>
+    <style>
+      h1 {
+        text-align: center;
+        font-family: 'Courier New';
+        font-size: 50px;
+        color: red;
+      }
+      h2 {
+        text-align: center;
+        font-family: 'Courier New';
+        font-size: 30px;
+        color: black;
+      }
+      p {
+        text-align: center;
+      }
+      div {
+        text-align: center;
+      }
+    </style>
+  </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <div class="background">
+      <div class="transbox">
+        <h1>Frances Krsinich</h1>
+      </div>
+    </div>
+
+    <div>
+      <div class="background">
+        <div class="transbox">
+          <img
+            class="image-1"
+            src="https://media1.tenor.com/images/c30d6490196742a193c2ed49a45e364b/tenor.gif?itemid=12740211"
+            alt="workerdancing"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="background">
+      <div class="transbox">
+        <h2>links to stuff</h2>
+        <p>here's where the links will be</p>
+      </div>
+    </div>
   </body>
 </html>
