--- a/sprint2/index.html
+++ b/sprint2/index.html
@@ -1,83 +1,57 @@
-<head>
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <title>Frances Krsinich</title>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="index.css" type="text/css" />
+    <meta charset="UTF-8" />
+    <title>Frances Krsinich</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="background">
+      <div class="transbox2">
+        <h1>Frances Krsinich</h1>
+      </div>
+    </div>
 
-      <style>
-        body {
-         background-image: url(https://krsinich.files.wordpress.com/2023/05/img_4804.jpg?w=2048);
-                   alt= 'background image';
-         background-repeat: no-repeat;
-         background-attachment: fixed;
-        background-size: cover;
-
-         }
-
-         div.background {
-         background: url(klematis.jpg) repeat;
-         /* border: 2px solid black; */
-         }
-
-         div.transbox {
-           margin: 60px;
-           background-color: #ffffff;
-           border: 5px solid rgb(195, 84, 84);
-           opacity: 0.5;
-         }
-
-         div.transbox p {
-           margin: 10%;
-           font-weight: bold;
-           color: #000000;
-         }
-      </style>
-      <style>
-        h1 {
-          text-align: center;
-          font-family: 'Courier New';
-          font-size: 50px;
-          color: red;
-        }
-        h2 {
-          text-align: center;
-          font-family: 'Courier New';
-          font-size: 30px;
-          color: black;
-        }
-        p {
-          text-align: center;
-        }
-        div {
-          text-align: center;
-        }
-      </style>
-    </head>
-    <body>
+    <div>
       <div class="background">
-        <div class="transbox">
-          <h1>Frances Krsinich</h1>
+        <div class="transbox1">
+          <img
+            class="image-1"
+            src="https://media1.tenor.com/images/c30d6490196742a193c2ed49a45e364b/tenor.gif?itemid=12740211"
+            alt="workerdancing"
+          />
         </div>
       </div>
+    </div>
 
-      <div>
-        <div class="background">
-          <div class="transbox">
-            <img
-              class="image-1"
-              src="https://media1.tenor.com/images/c30d6490196742a193c2ed49a45e364b/tenor.gif?itemid=12740211"
-              alt="workerdancing"
-            />
-          </div>
-        </div>
+    <div class="background">
+      <div class="transbox2">
+        <h2>links to stuff</h2>
+        <a href="blog.html" id="special-font">
+          see my <span style="color: blue">blog</span> here!
+        </a>
+        <p class="para-text">and here's a different font</p>
+        <p id="special-font">
+          and here's where the special font is and I will be saying lots in this
+          bit because it's the wordy wordy section where I go on about stuff
+        </p>
       </div>
+    </div>
 
+    <div>
       <div class="background">
-        <div class="transbox">
-          <h2>links to stuff</h2>
-          <p>here's where the links will be</p>
+        <div class="transbox3">
+          <img
+            class="image-2"
+            src="https://media3.giphy.com/media/LWBkgGLVvDBJK/200.gif"
+            alt="crawlingman"
+          />
         </div>
       </div>
-    </body>
-  </html>
-</head>
+    </div>
+  </body>
+</html>
