add the morning page

--- a/sprint2/blog.html
+++ b/sprint2/blog.html
@@ -11,12 +11,6 @@
   </head>
   <body>
     <div class="background">
-      <div class="transbox2">
-        <h2>blog</h2>
-        <p>blog content in here</p>
-        <p class="para-text">more blog content</p>
-        <p id="special-font">and yet more blog content</p>
-      </div>
       <div>
         <div class="background">
           <div class="transbox3">
@@ -28,11 +22,37 @@
           </div>
         </div>
       </div>
+
+      <div class="transbox2">
+        <h2>blog</h2>
+        <p>
+          getting up early in the
+          <a href="morning.html" class="para-text"> morning </a>
+        </p>
+
+        <p class="para-text">more blog content</p>
+        <p id="special-font">and yet more blog content</p>
+      </div>
+
+      <div>
+        <a href="index.html" class="para-text"> home again </a>
+        <br />
+        <a href="https://handbook.eda.nz/" class="para-text">
+          and here's the student handbook
+        </a>
+      </div>
+
+      <div>
+        <div class="background">
+          <div class="transbox4">
+            <img
+              class="image-2"
+              src="https://media.giphy.com/media/13pnwksUoSDyCs/giphy.gif"
+              alt="fallingoffcliff"
+            />
+          </div>
+        </div>
+      </div>
     </div>
-    <a href="index.html" class="para-text"> home again </a>
-    <br />
-    <a href="https://handbook.eda.nz/" class="para-text">
-      and here's the student handbook
-    </a>
   </body>
 </html>
