--- a/sprint2/index.html
+++ b/sprint2/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="index.css" type="text/css" />
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Frances Krsinich</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap"
