added explainer page - classes versus ids

--- a/sprint2/blog.html
+++ b/sprint2/blog.html
@@ -30,7 +30,11 @@
           <a href="morning.html" class="para-text"> morning </a>
         </p>
 
-        <p class="para-text">more blog content</p>
+        <p class="para-text">
+          <a href="../blog/html-css.html" class="para-text">
+            find out about when to use class versus id
+          </a>
+        </p>
         <p id="special-font">and yet more blog content</p>
       </div>
 
