add Te Houtaewa story

--- a/sprint2/blog.html
+++ b/sprint2/blog.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="blog.css" type="text/css" />
     <meta charset="UTF-8" />
-    <title>Frances Krsinich blog</title>
+    <title>Blog</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap"
       rel="stylesheet"
@@ -33,6 +33,12 @@
         <p class="para-text">
           <a href="../blog/html-css.html" class="para-text">
             find out about when to use class versus id
+          </a>
+        </p>
+
+        <p class="para-text2">
+          <a href="../blog/te-houtaewa-template.html" class="para-text2">
+            Te Houtaewa story
           </a>
         </p>
         <p id="special-font">and yet more blog content</p>
