put all the code in one folder for ease of use

--- a/sprint2/blog.html
+++ b/sprint2/blog.html
@@ -31,13 +31,13 @@
         </p>
 
         <p class="para-text">
-          <a href="../blog/html-css.html" class="para-text">
+          <a href="html-css.html" class="para-text">
             find out about when to use class versus id
           </a>
         </p>
 
         <p class="para-text2">
-          <a href="../blog/te-houtaewa-template.html" class="para-text2">
+          <a href="te-houtaewa-template.html" class="para-text2">
             Te Houtaewa story
           </a>
         </p>
