add learning plan and identity, values and strengths

--- a/sprint2/blog.html
+++ b/sprint2/blog.html
@@ -24,30 +24,37 @@
       </div>
 
       <div class="transbox2">
-        <h2>blog</h2>
+        <h2>blog blog blog blog blog blog</h2>
         <p>
           getting up early in the
           <a href="morning.html" class="para-text"> morning </a>
         </p>
 
-        <p class="para-text">
-          <a href="html-css.html" class="para-text">
-            find out about when to use class versus id
-          </a>
+        <p>
+          <a href="html-css.html" class="para-text"> find out about </a>
+          when to use class versus id
         </p>
 
+        <p>
+          Te Houtaewa
+          <a href="te-houtaewa-template.html" class="para-text"> story </a>
+        </p>
         <p class="para-text2">
-          <a href="te-houtaewa-template.html" class="para-text2">
-            Te Houtaewa story
+          <a href="../blog/identity-values.html" class="para-text">
+            identity, strengths and values
           </a>
         </p>
-        <p id="special-font">and yet more blog content</p>
+        <p class="para-text2">
+          <a href="../blog/learning-plan.html" class="para-text">
+            learning plan
+          </a>
+        </p>
       </div>
 
       <div>
-        <a href="index.html" class="para-text"> home again </a>
+        <a href="index.html" class="para-text2"> home again </a>
         <br />
-        <a href="https://handbook.eda.nz/" class="para-text">
+        <a href="https://handbook.eda.nz/" class="para-text2">
           and here's the student handbook
         </a>
       </div>
