--- a/sprint2/index.html
+++ b/sprint2/index.html
@@ -31,14 +31,10 @@
 
     <div class="background">
       <div class="transbox2">
-        <h2>links to stuff</h2>
-        <a href="blog.html" id="special-font">
-          see my <span style="color: blue">blog</span> here!
-        </a>
-        <p class="para-text">and here's a different font</p>
-        <p id="special-font">
-          and here's where the special font is and I will be saying lots in this
-          bit because it's the wordy wordy section where I go on about stuff
+        <p class="para-text">dancing around and smashing it!!</p>
+        <h2>and linking to stuff <a href="blog.html">here</a> for you</h2>
+        <p class="special-font">
+          then crawling along slowly like an old guy...
         </p>
       </div>
     </div>
