fix issue with class para-text2 not being used consistently

--- a/sprint2/blog.html
+++ b/sprint2/blog.html
@@ -44,7 +44,7 @@
             identity, strengths and values
           </a>
         </p>
-        <p class="para-text2">
+        <p class="para-text">
           <a href="../blog/learning-plan.html" class="para-text">
             learning plan
           </a>
