fix typo in background style

--- a/index.html
+++ b/index.html
@@ -5,31 +5,30 @@
 
     <style>
       body {
-       background-image: url(https://krsinich.files.wordpress.com/2023/05/img_4804.jpg?w=2048);
-                 alt= 'background image';
-       background-repeat: no-repeat;
-       background-attachment: fixed;
-      background-size: cover;
+        background-image: url(https://krsinich.files.wordpress.com/2023/05/img_4804.jpg?w=2048)
+          alt= 'background image';
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+      }
 
-       }
+      div.background {
+        background: url(klematis.jpg) repeat;
+        /* border: 2px solid black; */
+      }
 
-       div.background {
-       background: url(klematis.jpg) repeat;
-       /* border: 2px solid black; */
-       }
+      div.transbox {
+        margin: 60px;
+        background-color: #ffffff;
+        border: 5px solid rgb(195, 84, 84);
+        opacity: 0.5;
+      }
 
-       div.transbox {
-         margin: 60px;
-         background-color: #ffffff;
-         border: 5px solid rgb(195, 84, 84);
-         opacity: 0.5;
-       }
-
-       div.transbox p {
-         margin: 10%;
-         font-weight: bold;
-         color: #000000;
-       }
+      div.transbox p {
+        margin: 10%;
+        font-weight: bold;
+        color: #000000;
+      }
     </style>
     <style>
       h1 {
