--- a/index.html
+++ b/index.html
@@ -1,66 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="main.css" type="text/css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Frances Krsinich</title>
-
-    <style>
-      body {
-        background-image: url(https://krsinich.files.wordpress.com/2023/05/img_4804.jpg?w=2048)
-          alt= 'background image';
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: cover;
-      }
-
-      div.background {
-        background: url(klematis.jpg) repeat;
-        /* border: 2px solid black; */
-      }
-
-      div.transbox {
-        margin: 60px;
-        background-color: #ffffff;
-        border: 5px solid rgb(195, 84, 84);
-        opacity: 0.5;
-      }
-
-      div.transbox p {
-        margin: 10%;
-        font-weight: bold;
-        color: #000000;
-      }
-    </style>
-    <style>
-      h1 {
-        text-align: center;
-        font-family: 'Courier New';
-        font-size: 50px;
-        color: red;
-      }
-      h2 {
-        text-align: center;
-        font-family: 'Courier New';
-        font-size: 30px;
-        color: black;
-      }
-      p {
-        text-align: center;
-      }
-      div {
-        text-align: center;
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="background">
-      <div class="transbox">
+      <div class="transbox2">
         <h1>Frances Krsinich</h1>
       </div>
     </div>
 
     <div>
       <div class="background">
-        <div class="transbox">
+        <div class="transbox1">
           <img
             class="image-1"
             src="https://media1.tenor.com/images/c30d6490196742a193c2ed49a45e364b/tenor.gif?itemid=12740211"
@@ -71,9 +30,24 @@
     </div>
 
     <div class="background">
-      <div class="transbox">
-        <h2>links to stuff</h2>
-        <p>here's where the links will be</p>
+      <div class="transbox2">
+        <p class="para-text">dancing around and smashing it!!</p>
+        <h2>and linking to stuff <a href="blog/blog.html">here</a> for you</h2>
+        <p class="special-font">
+          then crawling along slowly like an old guy...
+        </p>
+      </div>
+    </div>
+
+    <div>
+      <div class="background">
+        <div class="transbox3">
+          <img
+            class="image-2"
+            src="https://media3.giphy.com/media/LWBkgGLVvDBJK/200.gif"
+            alt="crawlingman"
+          />
+        </div>
       </div>
     </div>
   </body>
